# reference-patterns

./: .gitignore  AGENTS.md  README.md  go.work  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-site.yml
fullstack/auth/paseto-cross-language/: Makefile  PATTERN.md  buf.gen.go.yaml  buf.gen.rust.yaml  buf.gen.ts.yaml
fullstack/auth/paseto-cross-language/verifier-rust/: Cargo.toml
fullstack/auth/paseto-cross-language/verifier-rust/migrations/: 0001_bookmarks.sql
fullstack/auth/paseto-cross-language/verifier-rust/src/: access.rs  bookmark.rs  main.rs  paseto.rs  service.rs  store.rs  validate.rs
fullstack/auth/paseto-cross-language/verifier-rust/src/pb/: descriptors.binpb  mod.rs
fullstack/auth/paseto-cross-language/verifier-rust/src/pb/bookmark/v1/: bookmark.v1.rs  bookmark.v1.tonic.rs
fullstack/auth/paseto-cross-language/verifier-rust/src/pb/demo/v1/: demo.v1.rs  demo.v1.tonic.rs
fullstack/rpc/connect-protovalidate-tanstack/: PATTERN.md  buf.gen.yaml
go/concurrency/bounded-parallel-map/: PATTERN.md  go.mod  go.sum
go/storage/idempotent-create/: PATTERN.md  go.mod  go.sum  store.go  store_test.go
go/testing/table-driven-tests/: PATTERN.md  go.mod
protobuf/buf-setup/: PATTERN.md  buf.gen.yaml  buf.yaml
rust/agent/ollama-tool-calling/: Cargo.toml  PATTERN.md
rust/agent/verify-loop/: Cargo.toml  PATTERN.md
rust/retrieval/bm25-ranking/: Cargo.toml  PATTERN.md
scripts/: generate-llms.sh  test-all.sh
site/: astro.config.mjs  package.json
site/src/: content.config.ts
templates/pattern/: PATTERN.md
(+147 files in other folders)
