[package]
name = "verifier-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
pasetors = "0.7.8"
prost = "0.14.4"
prost-protovalidate = { version = "0.6.0", features = ["cel", "tonic"] }
prost-reflect = "0.16.5"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
time = { version = "0.3.53", features = ["formatting"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.14.6"
tonic-prost = "0.14.6"
tonic-web = "0.14.6"
tower-http = { version = "0.7.0", features = ["cors"] }
uuid = { version = "1.23.5", features = ["v4"] }
